tried to fixed responve overflow

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -345,7 +345,7 @@ div.container{
         display: grid;
         grid-template-columns: 1fr;        
         margin-left: 100px;
-        margin-top: 20px;
+        margin-top: 0px;
         background-color: #f7f7f7;
         padding: 1em;        
         div.article{        
